changes made to the hover card wasnt given the right result, fixed now

--- a/index.html
+++ b/index.html
@@ -16,22 +16,21 @@
       <p class="profile-des">"Front-end developer and avid reader."</p>
       <div class="profile-card">
         <div class="card">
-          <a href="#"  class="social-link">Github</a>
+          <a href="#" class="social-link">Github</a>
         </div>
         <div class="card">
-         <a href="#" class="social-link">Frontend Mentor</a>
+         <a href="#">Frontend Mentor</a>
         </div>
         <div class="card">
-          <a href="#"  class="social-link">LinkedIn</a>
+          <a href="#">LinkedIn</a>
         </div>
         <div class="card">
-          <a href="#"  class="social-link">Twitter</a>
+          <a href="#">Twitter</a>
         </div>
         <div class="card">
-          <a href="#"  class="social-link">Instagram</a>
+          <a href="#">Instagram</a>
         </div>
       </div>
-      
     </div>
   </main> 
 
